--- a/v3/WebPrograming2_Final-Project/src/views/Film/admin/manage-film.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Film/admin/manage-film.ejs
@@ -1,17 +1,51 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-<h1>Mange Film</h1>
-
-<button id="add-btn">Add</button><br>
-
-<% films.forEach(element => { %>
-    <div>
-        <label style="min-width: 300px; display: inline-block;"><%= element.displayName %></label>
-        <button class="delete-btn" data-id="<%= element.uuid %>">Delete</button>
-        <button class="update-btn" data-id="<%= element.uuid %>">Update</button>
+<div>
+    <div class="card">
+        <div class="card-body">
+            <button style="margin-bottom: 20px; font-size: large;" class="btn btn-success mr-2" id="add-btn"> <u>Add a movie now</u></button><br>
+            <h4 class="card-title">List of movies</h4>
+            <table class="table table-hover" id="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Publish Date</th>
+                        <th>Duration</th>
+                        <th>Trailer</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                    <% films.forEach(element => { %>
+                        <tr>
+                            <td><%= element.displayName %></td>
+                            <td><%= element.publishDate.toISOString().slice(0,10) %></td>
+                            <td><%= element.time %></td>
+                            <td><%= element.trailer %></td>
+                            <td>
+                                <div>
+                                    <button class="btn btn-danger mr-2"
+                                            onclick="location.href='/admin/manage-film?filmID=<%=element.uuid%>&action=delete'"
+                                            data-id="<%= element.uuid %>">Delete</button>
+                                    <button class="btn btn-primary mr-5" 
+                                            onclick="location.href='/admin/manage-film/update-film?filmID=<%=element.uuid%>'"
+                                            data-id="<%= element.uuid %>">Update</button>
+                                </div>
+                            </td>
+                        </tr>
+                    <% }) %>
+               
+            </table>
+            
+        </div>
+        
+        <div class="card-body align-items-center d-flex justify-content-center">
+            <div class="pagination">
+                
+            </div>
+        </div>
     </div>
-<% }) %>
-
+</div>
 
 <script>
 
@@ -24,13 +58,13 @@
     });
 
     $(function() {
-        $(".delete-btn").click(function() {
+        $(".[btn btn-danger mr-2]").click(function() {
             window.location.href = `/admin/manage-film?filmID=${$(this).data("id")}&action=delete`;
         });
     });
 
     $(function() {
-        $(".update-btn").click(function() {
+        $(".(btn btn-primary mr-5)").click(function() {
             window.location.href = `/admin/manage-film/update-film?filmID=${$(this).data("id")}`;
         });
     });
