--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -131,6 +131,7 @@
                     </div>
 
                     <div class="row">
+                        
                         <label for="register_password">
                             Password:
                             <input
@@ -138,6 +139,8 @@
                                 name="register_password"
                                 id="password-2"
                                 placeholder="Password..."
+                                minlength="8"
+                                pattern="[A-Za-z0-9]+"
                                 required="required"
                             />
                         </label>
