--- a/v3/WebPrograming2_Final-Project/src/views/error/not-enough-money.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/error/not-enough-money.ejs
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="hero-ct">
-            <h1 style="margin-left: 12px;">SORRY YOU DON'T HAVE ENOUGH MONEY TO DO THIS SERVICE</h1>
+            <h1 style="margin-left: 12px;">BẠN KHÔNG ĐỦ TIỀN THỰC HIỆN DỊCH VỤ NÀY</h1>
           </div>
         </div>
       </div>
