--- a/v3/WebPrograming2_Final-Project/src/views/error/check-login.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/error/check-login.ejs
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="hero-ct">
-            <h1 style="margin-left: 12px;">PLEASE LOGIN TO USE THIS SERVICE</h1>
+            <h1 style="margin-left: 12px;">HÃY ĐĂNG NHẬP ĐỂ SỬ DỤNG DỊCH VỤ</h1>
           </div>
         </div>
       </div>
