--- a/v3/WebPrograming2_Final-Project/src/views/Film/admin/report-film.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Film/admin/report-film.ejs
@@ -1,3 +1,19 @@
+
+<script>
+  var myBarChart = new Chart(document.getElementById("canvas").getContext("2d")).Bar(BarChart, {scaleFontSize: 14, scaleFontColor: "#ff8540"});
+  var BarChart = {
+    labels: ["Ruby", "jQuery", "Java", "ASP.Net", "PHP"],
+    datasets: [{
+        fillColor: "rgba(151,249,190,0.5)",
+        strokeColor: "rgba(255,255,255,1)",
+        data: [13, 20, 30, 40, 50]
+    }, {
+        fillColor: "rgba(252,147,65,0.5)",
+        strokeColor: "rgba(255,255,255,1)",
+        data: [28, 68, 40, 19, 96]
+    }]
+}
+</script>
 <style>
   #tableFilm {
     font-family: Arial, Helvetica, sans-serif;
@@ -50,7 +66,7 @@
     <input type="date" id="fromDate" name="fromDate" value="<%- fromDate?fromDate:'' %>">
     <label for="toDate">toDate:</label>
     <input type="date" id="toDate" name="toDate"  value="<%- toDate?toDate:'' %>">
-    <input type="submit" value="Check">
+    <input type="submit" value="Check" class="btn btn-success mr-2">
   </form>
   <br>
   <br>
@@ -75,7 +91,7 @@
 <br>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
 <h2>REPORT FOR CINEMA CLUSTER</h2>
-<table id="tableCluster" style="width:100%">
+<table id="tableCluster" name="tableCluster" style="width:100%">
   <tr>
     <th>Name Cluster</th>
     <th>Address</th>
@@ -91,4 +107,78 @@
     </tr>
   <% }) %>
 </table>
+<br>
+<br>
+<br>
+<button onclick="draw()" class="btn btn-success mr-2">Draw chart</button>
 
+<div class="row">
+  <div class="col-sm-4">
+      <div class="nenxanh">
+        <div id="piechart" style="width: 500px; height: 500px;"></div>
+      </div>
+     </div>
+     <div class="col-sm-8">
+      <div class="nenhong">
+          <div id="columnchart" style="width: 750px; height: 500px;"></div>
+      </div>
+     </div>
+ </div>
+
+<script type="text/javascript" src="/js/loader.js"></script>
+<script type="text/javascript">
+  google.charts.load('current', {
+      'packages': ['corechart']
+  });
+  google.charts.setOnLoadCallback(drawPieChart);
+  google.charts.setOnLoadCallback(drawColumnChart);
+  function draw() {
+    var arr = [];
+    var refTab=document.getElementById("tableCluster");
+            for ( var i = 1; i<refTab.rows.length; i++ ) { 
+                    item=[];
+                    item.push(refTab.rows[i].cells[0].innerHTML);
+                    item.push(parseInt(refTab.rows[i].cells[3].innerHTML));
+                    arr.push(item);
+            }
+      var data = google.visualization.arrayToDataTable(getvalueTable(arr));
+      var options = {
+          title: 'DOANH THU CỤM RẠP',
+          is3D: true
+      };
+      var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+      chart.draw( data, options);
+      
+      
+      var arr1 = [];
+      var refTab1=document.getElementById("tableFilm");
+              for ( var i = 1; i<refTab1.rows.length; i++ ) { 
+                      item=[];
+                      item.push(refTab1.rows[i].cells[0].innerHTML);
+                      item.push(parseInt(refTab1.rows[i].cells[2].innerHTML));
+                      arr1.push(item);
+              }
+        var data1 = google.visualization.arrayToDataTable(getvalueTable(arr1));
+        var options1 = {
+            title: 'DOANH THU THEO PHIM',
+            is3D: true
+        };
+        var chart1 = new google.visualization.ColumnChart(document.getElementById('columnchart'));
+        chart1.draw(data1, options1);
+  }
+
+    function getvalueTable(arr){
+      ret=[];
+      item=[];
+      item.push('Name');
+      item.push('Value');
+      ret.push(item);
+      for (var i = 0; i < arr.length; i++) {
+              item=[];
+              item.push(arr[i][0]);
+              item.push(arr[i][1]);
+              ret.push(item);
+      }
+      return ret;
+    }
+</script>
