--- a/v3/WebPrograming2_Final-Project/src/views/layout.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/layout.ejs
@@ -226,7 +226,7 @@
                         ></ul>
                         <ul class="nav navbar-nav flex-child-menu menu-right">
                             <li>
-                                <a href="/filter"></a>
+                                <a href="/filter">danh sách cụm rạp</a>
                             </li>
                             <% if(!currentUser) { %>
                             <li class="loginLink">
@@ -247,7 +247,7 @@
                             <li>
                                 <a><%= currentUser.wallet%> (VND)</a>
                             </li>
-                            <li class="btn"><a href="/logout">Logout</a></li>
+                            <li class="btn"><a href="/logout">đăng xuất</a></li>
                             <% } %>
                         </ul>
                     </div>
